cdpp/cdpp_kernel/cd++/parser/cdlang/gram.output
Grammar

    0 $accept: Language $end

    1 Language: RuleList

    2 RuleList: Rule
    3         | Rule RuleList

    4 Rule: AssignResult Resultado '{' BoolExp '}'
    5     | AssignResult '{' AssignSet '}' Resultado '{' BoolExp '}'

    6 AssignResult: Resultado
    7             | '{' PortSendSet '}'

    8 Resultado: Constant
    9          | UNDEF
   10          | '{' ValueExp '}'
   11          | TupleExp

   12 ValueExp: '(' ValueExp ')'
   13         | RealExp
   14         | AbsValueExp
   15         | TupleExp
   16         | UNDEF
   17         | ValueExp OP_ADD_SUB ValueExp
   18         | ValueExp OP_MUL_DIV ValueExp

   19 AbsValueExp: CellRef OptPortName
   20            | PORTREF '(' PORTNAME ')'
   21            | STVAR_NAME

   22 TupleExp: '[' TupleBody ']'

   23 TupleBody: ValueExp
   24          | TupleBody ',' ValueExp

   25 BoolExp: BOOL
   26        | '(' BoolExp ')'
   27        | ValueRelExp
   28        | NOT BoolExp
   29        | BoolExp AND BoolExp
   30        | BoolExp OR BoolExp
   31        | BoolExp XOR BoolExp
   32        | BoolExp IMP BoolExp
   33        | BoolExp EQV BoolExp

   34 ValueRelExp: ValueExp OP_REL ValueExp
   35            | ValueExp OP_EQ ValueExp
   36            | COND_REAL_FUNC '(' RealExp ')'

   37 RealExp: TuplePosExp
   38        | Constant
   39        | Function
   40        | CELLPOS '(' RealExp ')'
   41        | SEND '(' PORTNAME ',' ValueExp ')'

   42 TuplePosExp: TupleExp '!' INT
   43            | AbsValueExp '!' INT

   44 OptPortName: /* empty */
   45            | PORTNAME

   46 AssignSet: /* empty */
   47          | Assign AssignSet

   48 Assign: STVAR_NAME OP_ASSIGN ValueExp ';'

   49 PortSendSet: /* empty */
   50            | PortSend PortSendSet

   51 PortSend: SEND '(' PORTNAME ',' ValueExp ')' ';'
   52         | PORTNAME OP_ASSIGN ValueExp ';'

   53 Constant: INT
   54         | REAL
   55         | CONSTFUNC

   56 Function: COUNT
   57         | STATECOUNT '(' RealExp OptParamPort ')'
   58         | UNARY_FUNC '(' ValueExp ')'
   59         | BINARY_FUNC '(' ValueExp ',' ValueExp ')'
   60         | WITHOUT_PARAM_FUNC_TIME
   61         | WITHOUT_PARAM_FUNC_RANDOM
   62         | UNARY_FUNC_RANDOM '(' RealExp ')'
   63         | BINARY_FUNC_RANDOM '(' RealExp ',' RealExp ')'
   64         | COND3_FUNC '(' BoolExp ',' ValueExp ',' ValueExp ')'
   65         | COND4_FUNC '(' BoolExp ',' ValueExp ',' ValueExp ',' ValueExp ')'

   66 OptParamPort: /* empty */
   67             | ',' PORTNAME

   68 CellRef: '(' Tupla

   69 Tupla: INT ',' INT Resto_nTupla

   70 Resto_nTupla: ',' INT Resto_nTupla
   71             | ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 42 43
'(' (40) 12 20 26 36 40 41 51 57 58 59 62 63 64 65 68
')' (41) 12 20 26 36 40 41 51 57 58 59 62 63 64 65 71
',' (44) 24 41 51 59 63 64 65 67 69 70
';' (59) 48 51 52
'[' (91) 22
']' (93) 22
'{' (123) 4 5 7 10
'}' (125) 4 5 7 10
error (256)
EQV (258) 33
IMP (259) 32
XOR (260) 31
OR (261) 30
AND (262) 29
NOT (263) 28
OP_EQ (264) 35
OP_REL (265) 34
OP_ASSIGN (266) 48 52
OP_ADD_SUB (267) 17
OP_MUL_DIV (268) 18
REAL (269) 54
INT (270) 42 43 53 69 70
BOOL (271) 25
COUNT (272) 56
UNDEF (273) 9 16
CONSTFUNC (274) 55
WITHOUT_PARAM_FUNC_TIME (275) 60
STVAR_NAME (276) 21 48
WITHOUT_PARAM_FUNC_RANDOM (277) 61
PORTREF (278) 20
SEND (279) 41 51
CELLPOS (280) 40
BINARY_FUNC (281) 59
BINARY_FUNC_RANDOM (282) 63
COND3_FUNC (283) 64
COND4_FUNC (284) 65
STATECOUNT (285) 57
UNARY_FUNC (286) 58
COND_REAL_FUNC (287) 36
UNARY_FUNC_RANDOM (288) 62
PORTNAME (289) 20 41 45 51 52 67


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Language (45)
    on left: 1, on right: 0
RuleList (46)
    on left: 2 3, on right: 1 3
Rule (47)
    on left: 4 5, on right: 2 3
AssignResult (48)
    on left: 6 7, on right: 4 5
Resultado (49)
    on left: 8 9 10 11, on right: 4 5 6
ValueExp (50)
    on left: 12 13 14 15 16 17 18, on right: 10 12 17 18 23 24 34 35
    41 48 51 52 58 59 64 65
AbsValueExp (51)
    on left: 19 20 21, on right: 14 43
TupleExp (52)
    on left: 22, on right: 11 15 42
TupleBody (53)
    on left: 23 24, on right: 22 24
BoolExp (54)
    on left: 25 26 27 28 29 30 31 32 33, on right: 4 5 26 28 29 30
    31 32 33 64 65
ValueRelExp (55)
    on left: 34 35 36, on right: 27
RealExp (56)
    on left: 37 38 39 40 41, on right: 13 36 40 57 62 63
TuplePosExp (57)
    on left: 42 43, on right: 37
OptPortName (58)
    on left: 44 45, on right: 19
AssignSet (59)
    on left: 46 47, on right: 5 47
Assign (60)
    on left: 48, on right: 47
PortSendSet (61)
    on left: 49 50, on right: 7 50
PortSend (62)
    on left: 51 52, on right: 50
Constant (63)
    on left: 53 54 55, on right: 8 38
Function (64)
    on left: 56 57 58 59 60 61 62 63 64 65, on right: 39
OptParamPort (65)
    on left: 66 67, on right: 57
CellRef (66)
    on left: 68, on right: 19
Tupla (67)
    on left: 69, on right: 68
Resto_nTupla (68)
    on left: 70 71, on right: 69 70


state 0

    0 $accept: . Language $end

    REAL       shift, and go to state 1
    INT        shift, and go to state 2
    UNDEF      shift, and go to state 3
    CONSTFUNC  shift, and go to state 4
    '['        shift, and go to state 5
    '{'        shift, and go to state 6

    Language      go to state 7
    RuleList      go to state 8
    Rule          go to state 9
    AssignResult  go to state 10
    Resultado     go to state 11
    TupleExp      go to state 12
    Constant      go to state 13


state 1

   54 Constant: REAL .

    $default  reduce using rule 54 (Constant)


state 2

   53 Constant: INT .

    $default  reduce using rule 53 (Constant)


state 3

    9 Resultado: UNDEF .

    $default  reduce using rule 9 (Resultado)


state 4

   55 Constant: CONSTFUNC .

    $default  reduce using rule 55 (Constant)


state 5

   22 TupleExp: '[' . TupleBody ']'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 30
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    TupleBody    go to state 33
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 6

    7 AssignResult: '{' . PortSendSet '}'
   10 Resultado: '{' . ValueExp '}'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 39
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    PORTNAME                   shift, and go to state 40
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    $default  reduce using rule 49 (PortSendSet)

    ValueExp     go to state 41
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    PortSendSet  go to state 42
    PortSend     go to state 43
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 7

    0 $accept: Language . $end

    $end  shift, and go to state 44


state 8

    1 Language: RuleList .

    $default  reduce using rule 1 (Language)


state 9

    2 RuleList: Rule .
    3         | Rule . RuleList

    REAL       shift, and go to state 1
    INT        shift, and go to state 2
    UNDEF      shift, and go to state 3
    CONSTFUNC  shift, and go to state 4
    '['        shift, and go to state 5
    '{'        shift, and go to state 6

    $default  reduce using rule 2 (RuleList)

    RuleList      go to state 45
    Rule          go to state 9
    AssignResult  go to state 10
    Resultado     go to state 11
    TupleExp      go to state 12
    Constant      go to state 13


state 10

    4 Rule: AssignResult . Resultado '{' BoolExp '}'
    5     | AssignResult . '{' AssignSet '}' Resultado '{' BoolExp '}'

    REAL       shift, and go to state 1
    INT        shift, and go to state 2
    UNDEF      shift, and go to state 3
    CONSTFUNC  shift, and go to state 4
    '['        shift, and go to state 5
    '{'        shift, and go to state 46

    Resultado  go to state 47
    TupleExp   go to state 12
    Constant   go to state 13


state 11

    6 AssignResult: Resultado .

    $default  reduce using rule 6 (AssignResult)


state 12

   11 Resultado: TupleExp .

    $default  reduce using rule 11 (Resultado)


state 13

    8 Resultado: Constant .

    $default  reduce using rule 8 (Resultado)


state 14

   56 Function: COUNT .

    $default  reduce using rule 56 (Function)


state 15

   16 ValueExp: UNDEF .

    $default  reduce using rule 16 (ValueExp)


state 16

   60 Function: WITHOUT_PARAM_FUNC_TIME .

    $default  reduce using rule 60 (Function)


state 17

   21 AbsValueExp: STVAR_NAME .

    $default  reduce using rule 21 (AbsValueExp)


state 18

   61 Function: WITHOUT_PARAM_FUNC_RANDOM .

    $default  reduce using rule 61 (Function)


state 19

   20 AbsValueExp: PORTREF . '(' PORTNAME ')'

    '('  shift, and go to state 48


state 20

   41 RealExp: SEND . '(' PORTNAME ',' ValueExp ')'

    '('  shift, and go to state 49


state 21

   40 RealExp: CELLPOS . '(' RealExp ')'

    '('  shift, and go to state 50


state 22

   59 Function: BINARY_FUNC . '(' ValueExp ',' ValueExp ')'

    '('  shift, and go to state 51


state 23

   63 Function: BINARY_FUNC_RANDOM . '(' RealExp ',' RealExp ')'

    '('  shift, and go to state 52


state 24

   64 Function: COND3_FUNC . '(' BoolExp ',' ValueExp ',' ValueExp ')'

    '('  shift, and go to state 53


state 25

   65 Function: COND4_FUNC . '(' BoolExp ',' ValueExp ',' ValueExp ',' ValueExp ')'

    '('  shift, and go to state 54


state 26

   57 Function: STATECOUNT . '(' RealExp OptParamPort ')'

    '('  shift, and go to state 55


state 27

   58 Function: UNARY_FUNC . '(' ValueExp ')'

    '('  shift, and go to state 56


state 28

   62 Function: UNARY_FUNC_RANDOM . '(' RealExp ')'

    '('  shift, and go to state 57


state 29

   12 ValueExp: '(' . ValueExp ')'
   68 CellRef: '(' . Tupla

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 58
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 59
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38
    Tupla        go to state 60


state 30

   17 ValueExp: ValueExp . OP_ADD_SUB ValueExp
   18         | ValueExp . OP_MUL_DIV ValueExp
   23 TupleBody: ValueExp .

    OP_ADD_SUB  shift, and go to state 61
    OP_MUL_DIV  shift, and go to state 62

    $default  reduce using rule 23 (TupleBody)


state 31

   14 ValueExp: AbsValueExp .
   43 TuplePosExp: AbsValueExp . '!' INT

    '!'  shift, and go to state 63

    $default  reduce using rule 14 (ValueExp)


state 32

   15 ValueExp: TupleExp .
   42 TuplePosExp: TupleExp . '!' INT

    '!'  shift, and go to state 64

    $default  reduce using rule 15 (ValueExp)


state 33

   22 TupleExp: '[' TupleBody . ']'
   24 TupleBody: TupleBody . ',' ValueExp

    ']'  shift, and go to state 65
    ','  shift, and go to state 66


state 34

   13 ValueExp: RealExp .

    $default  reduce using rule 13 (ValueExp)


state 35

   37 RealExp: TuplePosExp .

    $default  reduce using rule 37 (RealExp)


state 36

   38 RealExp: Constant .

    $default  reduce using rule 38 (RealExp)


state 37

   39 RealExp: Function .

    $default  reduce using rule 39 (RealExp)


state 38

   19 AbsValueExp: CellRef . OptPortName

    PORTNAME  shift, and go to state 67

    $default  reduce using rule 44 (OptPortName)

    OptPortName  go to state 68


state 39

   41 RealExp: SEND . '(' PORTNAME ',' ValueExp ')'
   51 PortSend: SEND . '(' PORTNAME ',' ValueExp ')' ';'

    '('  shift, and go to state 69


state 40

   52 PortSend: PORTNAME . OP_ASSIGN ValueExp ';'

    OP_ASSIGN  shift, and go to state 70


state 41

   10 Resultado: '{' ValueExp . '}'
   17 ValueExp: ValueExp . OP_ADD_SUB ValueExp
   18         | ValueExp . OP_MUL_DIV ValueExp

    OP_ADD_SUB  shift, and go to state 61
    OP_MUL_DIV  shift, and go to state 62
    '}'         shift, and go to state 71


state 42

    7 AssignResult: '{' PortSendSet . '}'

    '}'  shift, and go to state 72


state 43

   50 PortSendSet: PortSend . PortSendSet

    SEND      shift, and go to state 73
    PORTNAME  shift, and go to state 40

    $default  reduce using rule 49 (PortSendSet)

    PortSendSet  go to state 74
    PortSend     go to state 43


state 44

    0 $accept: Language $end .

    $default  accept


state 45

    3 RuleList: Rule RuleList .

    $default  reduce using rule 3 (RuleList)


state 46

    5 Rule: AssignResult '{' . AssignSet '}' Resultado '{' BoolExp '}'
   10 Resultado: '{' . ValueExp '}'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 75
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    $default  reduce using rule 46 (AssignSet)

    ValueExp     go to state 41
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    AssignSet    go to state 76
    Assign       go to state 77
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 47

    4 Rule: AssignResult Resultado . '{' BoolExp '}'

    '{'  shift, and go to state 78


state 48

   20 AbsValueExp: PORTREF '(' . PORTNAME ')'

    PORTNAME  shift, and go to state 79


state 49

   41 RealExp: SEND '(' . PORTNAME ',' ValueExp ')'

    PORTNAME  shift, and go to state 80


state 50

   40 RealExp: CELLPOS '(' . RealExp ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 81
    '['                        shift, and go to state 5

    AbsValueExp  go to state 82
    TupleExp     go to state 83
    RealExp      go to state 84
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 51

   59 Function: BINARY_FUNC '(' . ValueExp ',' ValueExp ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 85
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 52

   63 Function: BINARY_FUNC_RANDOM '(' . RealExp ',' RealExp ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 81
    '['                        shift, and go to state 5

    AbsValueExp  go to state 82
    TupleExp     go to state 83
    RealExp      go to state 86
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 53

   64 Function: COND3_FUNC '(' . BoolExp ',' ValueExp ',' ValueExp ')'

    NOT                        shift, and go to state 87
    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    BOOL                       shift, and go to state 88
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    COND_REAL_FUNC             shift, and go to state 89
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 90
    '['                        shift, and go to state 5

    ValueExp     go to state 91
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    BoolExp      go to state 92
    ValueRelExp  go to state 93
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 54

   65 Function: COND4_FUNC '(' . BoolExp ',' ValueExp ',' ValueExp ',' ValueExp ')'

    NOT                        shift, and go to state 87
    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    BOOL                       shift, and go to state 88
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    COND_REAL_FUNC             shift, and go to state 89
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 90
    '['                        shift, and go to state 5

    ValueExp     go to state 91
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    BoolExp      go to state 94
    ValueRelExp  go to state 93
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 55

   57 Function: STATECOUNT '(' . RealExp OptParamPort ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 81
    '['                        shift, and go to state 5

    AbsValueExp  go to state 82
    TupleExp     go to state 83
    RealExp      go to state 95
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 56

   58 Function: UNARY_FUNC '(' . ValueExp ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 96
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 57

   62 Function: UNARY_FUNC_RANDOM '(' . RealExp ')'

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 81
    '['                        shift, and go to state 5

    AbsValueExp  go to state 82
    TupleExp     go to state 83
    RealExp      go to state 97
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 58

   53 Constant: INT .
   69 Tupla: INT . ',' INT Resto_nTupla

    ','  shift, and go to state 98

    $default  reduce using rule 53 (Constant)


state 59

   12 ValueExp: '(' ValueExp . ')'
   17         | ValueExp . OP_ADD_SUB ValueExp
   18         | ValueExp . OP_MUL_DIV ValueExp

    OP_ADD_SUB  shift, and go to state 61
    OP_MUL_DIV  shift, and go to state 62
    ')'         shift, and go to state 99


state 60

   68 CellRef: '(' Tupla .

    $default  reduce using rule 68 (CellRef)


state 61

   17 ValueExp: ValueExp OP_ADD_SUB . ValueExp

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 100
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 62

   18 ValueExp: ValueExp OP_MUL_DIV . ValueExp

    REAL                       shift, and go to state 1
    INT                        shift, and go to state 2
    COUNT                      shift, and go to state 14
    UNDEF                      shift, and go to state 15
    CONSTFUNC                  shift, and go to state 4
    WITHOUT_PARAM_FUNC_TIME    shift, and go to state 16
    STVAR_NAME                 shift, and go to state 17
    WITHOUT_PARAM_FUNC_RANDOM  shift, and go to state 18
    PORTREF                    shift, and go to state 19
    SEND                       shift, and go to state 20
    CELLPOS                    shift, and go to state 21
    BINARY_FUNC                shift, and go to state 22
    BINARY_FUNC_RANDOM         shift, and go to state 23
    COND3_FUNC                 shift, and go to state 24
    COND4_FUNC                 shift, and go to state 25
    STATECOUNT                 shift, and go to state 26
    UNARY_FUNC                 shift, and go to state 27
    UNARY_FUNC_RANDOM          shift, and go to state 28
    '('                        shift, and go to state 29
    '['                        shift, and go to state 5

    ValueExp     go to state 101
    AbsValueExp  go to state 31
    TupleExp     go to state 32
    RealExp      go to state 34
    TuplePosExp  go to state 35
    Constant     go to state 36
    Function     go to state 37
    CellRef      go to state 38


state 63

   43 TuplePosExp: AbsValueExp '!' . INT

    INT  shift, and go to state 102


state 64

   42 TuplePosExp: TupleExp '!' . INT

    INT  shift, and go to state 103


state 65

   22 TupleExp: '[' TupleBody ']' .

    $default  reduce using rule 22 (TupleExp)


state 66

   24 TupleBody: TupleBody ',' . ValueExp
